# ImtCore

./: .gitignore  .gitmodules  ACTION_REQUIRED.md  ARCHITECTURE_DIAGRAM.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  MIGRATION_3RDPARTY_TO_SUBMODULES.md  MIGRATION_FILES_README.md  QUICK_REFERENCE.md  README.md  STEP_BY_STEP_MIGRATION.md  add-submodules.bat  add-submodules.sh  conanfile.py  create-github-repos.bat  create-github-repos.sh  migrate-3rdparty.bat  migrate-3rdparty.sh
Config/CMake/: ImtCoreEnv.cmake  WebCompiler.cmake
Config/QMake/: QmlControls.pri  WebCompiler.pri
Impl/ImtAuthGqlPck/: ImtAuthGqlPck.h
Impl/ImtAuthGuiPck/: ImtAuthGuiPck.cpp  ImtAuthGuiPck.h
Impl/ImtAuthPck/: ImtAuthPck.cpp  ImtAuthPck.h
Impl/ImtColPck/: ImtColPck.cpp  ImtColPck.h
Impl/ImtControlsGallery/Config/: BaseOnly.awc  ControlsGallery.awc
Impl/ImtControlsGallery/Impl/ControlsGallery/CMake/: CMakeLists.txt
Impl/ImtControlsGallery/Impl/ControlsGalleryGqlPck/CMake/: CMakeLists.txt
Impl/ImtControlsGallery/Qml/controlsgalleryqml/CMake/: CMakeLists.txt
Impl/ImtCoreLoc/Translations/: ImtCore_de_DE.ts
Impl/ImtQmlPck/CMake/: CMakeLists.txt
Impl/ImtServerAppPck/: ImtServerAppPck.cpp  ImtServerAppPck.h
Include/imt3d/: CPointsBasedObject.cpp
Include/imt3d/CMake/: CMakeLists.txt
Include/imt3dview/CMake/: CMakeLists.txt
Include/imtauth/: CPersonalAccessTokenManagerComp.cpp  CPersonalAccessTokenManagerComp.h  ILoginInfoProvider.h  IPersonalAccessTokenManager.h
Include/imtauthgql/: CClientRequestPersonalAccessTokenManagerComp.cpp  CClientRequestPersonalAccessTokenManagerComp.h  CSimpleLoginWrapComp.cpp  CSimpleLoginWrapComp.h
Include/imtauthgui/: CPersonalAccessTokenManagerGuiComp.cpp  CPersonalAccessTokenManagerGuiComp.h  CPersonalAccessTokenManagerGuiComp.ui  PersonalAccessTokenManagerGuiComp_README.md
Include/imtbase/: CDelegatedParamsSetComp.cpp  CParamsSetJoiner.cpp  CParamsSetJoiner.h
Include/imtclientgql/: CGqlRemoteRepresentationControllerCompBase.cpp  CSubscriptionManagerComp.cpp  TClientRequestManagerCompWrap.h
Include/imtcol/: CCollectionImportParam.cpp  CCollectionImportParam.h  ICollectionImportParam.h
Include/imtcrypt/CMake/: CMakeLists.txt
Include/imtdb/: CCompositeMigrationControllerComp.cpp
Include/imtdesign/: CDesignTokenFileParserComp.cpp
Include/imtfile/CMake/: CMakeLists.txt
Include/imtgeo/: CAddressCollectionControllerComp.cpp  CAddressElementDatabaseDelegateComp.cpp
Include/imtgql/Test/CMake/: CMakeLists.txt
Include/imthype/: CJobControllerCompBase.cpp  CJobControllerCompBase.h  IJobController.h
Include/imtimg/: CBitmapMetaInfoCreatorComp.cpp
Include/imtimg/CMake/: CMakeLists.txt
Include/imtmdbx/: CDocumentTable.cpp
Include/imtpy/CMake/: CMakeLists.txt
Include/imtqml/: CGqlModel.cpp  CGqlModel.h  CGqlRequest.cpp
Include/imtqml2d/CMake/: CMakeLists.txt
Include/imtrepo/CMake/: CMakeLists.txt
Include/imtsdl/: CGqlExtSchemaParser.cpp  CLogFilterComp.cpp  CSdlDocumentType.cpp  CSdlDocumentType.h
Include/imtsdlgencpp/: CGqlCollectionControllerBaseClassGeneratorComp.cpp  CSdlGenTools.cpp  CSdlGenTools.h  CSdlQObjectGeneratorComp.cpp
Include/imtserverapp/: CCollectionImportParamRepresentationControllerComp.cpp  CCollectionImportParamRepresentationControllerComp.h  CIdParamRepresentationControllerComp.cpp  CIdParamRepresentationControllerComp.h  CParamsRepresentationControllerComp.cpp  CParamsRepresentationControllerComp.h
Include/imtservergql/: CApplicationInfoControllerComp.cpp  CApplicationInfoControllerComp.h  CCommandIdSubscriptionsMonitorComp.cpp  CCommandIdSubscriptionsMonitorComp.h  CGqlPublisherCompBase.cpp  CGqlPublisherCompBase.h  CHttpGraphQLServletComp.cpp  CHttpGraphQLServletComp.h  CObjectCollectionControllerCompBase.cpp  CWebSocketServletComp.cpp  ICommandIdSubscriptionsMonitor.h
Partitura/ImtAuthVoce.arp/: LoginClient.acc  LoginClient.accl  PumaBasedRights.acc  PumaBasedRights.accl
Partitura/ImtClientVoce.arp/: RemoteAuthorizableClient.acc  RemoteAuthorizableClient.accl
Partitura/ImtCollectionVoce.arp/: ObjectCollectionView.acc
Partitura/ImtCoreVoce.arp/: SqLiteDatabaseEngine.acc  SqLiteDatabaseEngine.accl
Partitura/ImtGraphQlVoce.arp/: ApplicationInfoController.acc  ApplicationInfoController.accl  PumaGQLClientEngine.acc  PumaGQLClientEngine.accl
Partitura/ImtHttpServerVoce.arp/: AuthorizableServerConnectionParams.acc  AuthorizableServerConnectionParams.accl  AuthorizableServerFramework.acc  AuthorizableServerFramework.accl  WebSocketServerFramework.acc  WebSocketServerFramework.accl
Partitura/ImtQmlVoce.arp/: QmlClientFramework.acc  QmlClientFramework.accl
Qml/imtauthgui/: AuthorizationController.qml  AuthorizationPage.qml
Qml/imtcolgui/: MetaInfo.qml  MetaInfoDateDelegate.qml  imtcolguiqml.qrc  qmldir
Qml/imtcontrols/: imtcontrolsqml.qrc  qmldir
Qml/imtcontrols/Base/: Decorators.qml  StyleBase.qml  StyleComponents.qml
Qml/imtcontrols/Buttons/: TopButtonDecorator.qml
Qml/imtcontrols/Dialogs/: PopupDecoratorGql.qml
Qml/imtcontrols/Inputs/: CheckBox.qml
Qml/imtcontrols/Views/: TableCellDelegateCheckable.qml  TableHeaderParamComp.qml
Qml/imtdocgui/: DocumentManagerBase.qml  MultiDocumentCollectionView.qml
Qml/imtgui/Application/: ApplicationMain.qml
Qml/imtgui/Panels/: FilterDelegateBase.qml  MenuPanel.qml
Qml/imtgui/View/: SearchCompLegacy.qml
Qml/imtguigql/: ComboBoxGql.qml  ComboBoxGqlLegacy.qml  GqlSdlRequestSender.qml  PopupMenuDialogGql.qml  PopupMenuDialogGqlLegacy.qml
Qml/web/: imtcore.json
Sdl/imtapp/1.0/: Application.sdl
Sdl/imtbase/1.0/: ImtBaseTypes.sdl
Tests/Docker/: Dockerfile.linux  Dockerfile.windows  README.md  entrypoint.bat  entrypoint.sh
Tests/Docker/GUI/: README.md  global-setup.js  playwright.config.js  utils.js
Tests/Docker/Scripts/: README.md  run-tests-linux-core.sh  run-tests-linux-on-windows-core.bat  run-tests-linux-on-windows-template.bat  run-tests-linux-template.sh  run-tests-windows-core.bat  run-tests-windows-template.bat
Tools/JQML/v1/: .gitignore  README.md  package-lock.json  package.json  prepare.bat  prepare_dev.bat  (+2 more)
(+366 files in other folders)
